output.txt
   Compiling opengp v0.1.0 (/home/stephenp/Documents/opengp)
error[E0433]: failed to resolve: use of undeclared type `Modifier`
   --> src/components/clinical/allergy_form.rs:147:31
    |
147 |                 .add_modifier(Modifier::Bold),
    |                               ^^^^^^^^ use of undeclared type `Modifier`
    |
help: consider importing this struct
    |
  1 + use ratatui::style::Modifier;
    |

error[E0433]: failed to resolve: use of undeclared type `Modifier`
   --> src/components/clinical/allergy_form.rs:189:31
    |
189 |                 .add_modifier(Modifier::Bold),
    |                               ^^^^^^^^ use of undeclared type `Modifier`
    |
help: consider importing this struct
    |
  1 + use ratatui::style::Modifier;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `opengp` (lib) due to 2 previous errors
